chore: split edc xroad-webserver into smaller modules. Further fixes for edc deployment

--- a/Docker/centralserver/files/cs-xroad.conf
+++ b/Docker/centralserver/files/cs-xroad.conf
@@ -51,15 +51,14 @@ user=root
 startsecs=5
 autorestart=true
 priority=250
-stdout_logfile=/var/log/xroad/edc-identity-hub.log
 
-[program:xroad-edc-connector]
-command=/usr/share/xroad/bin/xroad-edc-connector
-user=root
-startsecs=5
-autorestart=true
-priority=300
-stdout_logfile=/var/log/xroad/edc-connector.log
+# [program:xroad-edc-connector]
+# command=/usr/share/xroad/bin/xroad-edc-connector
+# user=root
+# startsecs=5
+# autorestart=true
+# priority=300
+# stdout_logfile=/var/log/xroad/edc-connector.log
 
 [program:xroad-edc-credential-service]
 command=/usr/share/xroad/bin/xroad-edc-credential-service
@@ -67,4 +66,3 @@ user=root
 startsecs=5
 autorestart=true
 priority=300
-stdout_logfile=/var/log/xroad/edc-credential-service.log
