--- a/src/central-server/ds-credential-service/build.gradle
+++ b/src/central-server/ds-credential-service/build.gradle
@@ -1,7 +1,5 @@
 plugins {
-    id("java")
-    id("application")
-    alias(libs.plugins.shadow)
+    alias(libs.plugins.springBoot)
 }
 
 configurations {
@@ -15,8 +13,11 @@ configurations {
 }
 
 dependencies {
+    implementation(project(':common:common-service-bootstrap'))
+
     implementation libs.edc.boot
     implementation libs.edc.ext.http
+    implementation libs.edc.core.connector
     implementation libs.edc.spi.web
     implementation libs.edc.spi.jwt.signer
     implementation libs.edc.lib.crypto
@@ -25,44 +26,33 @@ dependencies {
     implementation libs.edc.did.core
     implementation libs.edc.core.token
     implementation libs.edc.spi.jsonLd
-    runtimeOnly(libs.edc.config.filesystem)
+    implementation libs.edc.monitor.jdk.logger
+    implementation libs.logback.classic
 
-    implementation(project(':common:common-core')) {
-        exclude group: 'org.eclipse.jetty'
-    }
-    implementation(project(":common:common-domain")) {
-        exclude group: 'org.eclipse.jetty'
-    }
-    implementation(project(":common:common-globalconf")) {
-        exclude group: 'org.eclipse.jetty'
-    }
-    implementation(project(':common:common-verifier')) {
-        exclude group: 'org.eclipse.jetty'
-    }
-    implementation(project(":security-server:edc:extensions:common:xroad-jws-signer")) {
-        exclude group: 'org.eclipse.jetty'
-    }
-    implementation(project(":security-server:edc:extensions:common:xroad-conf"))
+    implementation(project(':common:common-core'))
+    implementation(project(":common:common-domain"))
+    implementation(project(":common:common-globalconf"))
+    implementation(project(':common:common-verifier'))
+    implementation(project(":security-server:edc:extensions:common:xroad-jws-signer"))
+    implementation(project(":security-server:edc:extensions:common:xroad-spring-bridge"))
     implementation(project(":security-server:edc:extensions:common:xroad-webserver"))
 
     testImplementation libs.edc.junit
-    testImplementation(project(':common:common-test')) {
-        exclude group: 'org.eclipse.jetty'
+    testImplementation(project(':common:common-test'))
+    testImplementation('org.springframework:spring-test')
+}
+
+jar {
+    enabled = false
+}
+
+bootJar {
+    enabled = true
+    archiveBaseName = 'ds-credential-service'
+    manifest {
+        attributes(
+            'Implementation-Title': 'X-Road DS Credential Service',
+            'Implementation-Version': "$xroadVersion-$xroadBuildType",
+        )
     }
-    testImplementation('org.springframework:spring-test:6.1.12')
 }
-
-application {
-    mainClass.set("org.eclipse.edc.boot.system.runtime.BaseRuntime")
-}
-
-
-var distTar = tasks.named("distTar")
-var distZip = tasks.named("distZip")
-
-shadowJar {
-    mergeServiceFiles()
-    archiveFileName.set("ds-credential-service.jar")
-    dependsOn(distTar, distZip)
-}
-
