--- a/src/security-server/edc/extensions/common/xroad-httpclient/build.gradle
+++ b/src/security-server/edc/extensions/common/xroad-httpclient/build.gradle
@@ -5,9 +5,8 @@ plugins {
 dependencies {
     implementation(project(':security-server:edc:xroad-edc-security'))
     implementation project(":security-server:edc:spi:xroad-core-spi")
-    implementation(project(":security-server:edc:extensions:common:xroad-spring-bridge"))
-    api libs.jetty.server
-    api libs.jetty.servlet.ee10
+
     implementation libs.edc.spi.core
-    implementation libs.edc.spi.web
+    implementation libs.edc.core.connector
+    implementation libs.edc.lib.http
 }
