--- a/src/security-server/edc/runtime/control-plane/build.gradle
+++ b/src/security-server/edc/runtime/control-plane/build.gradle
@@ -19,8 +19,7 @@ dependencies {
     runtimeOnly(libs.edc.vault.hashicorp)
     runtimeOnly(libs.bundles.dpf)
     runtimeOnly(libs.edc.api.version)
-
-    implementation(project(":security-server:edc:extensions:common:xroad-spring-bridge"))
+    implementation(libs.edc.monitor.jdk.logger)
     implementation(libs.logback.classic)
 
     runtimeOnly(libs.bundles.sql.edc)
@@ -34,7 +33,9 @@ dependencies {
     implementation(project(":security-server:edc:extensions:control-plane:xroad-policy"))
     implementation(project(":security-server:edc:extensions:control-plane:xroad-identity-and-trust"))
     implementation(project(":security-server:edc:extensions:common:xroad-jws-signer"))
+    implementation(project(":security-server:edc:extensions:common:xroad-httpclient"))
     implementation(project(":security-server:edc:extensions:common:xroad-webserver"))
+    implementation(project(":security-server:edc:extensions:common:xroad-spring-bridge"))
 
     implementation libs.apache.commonsLang3
 
