--- a/src/security-server/admin-service/application/src/main/resources/application.yml
+++ b/src/security-server/admin-service/application/src/main/resources/application.yml
@@ -5,7 +5,17 @@ spring:
     name: proxy-ui-api
   main:
     banner-mode: log
+  datasource:
+    url: ${xroad.common.serverconf.hibernate.connection.url}
+    username: ${xroad.common.serverconf.hibernate.connection.username}
+    password: ${xroad.common.serverconf.hibernate.connection.password}
+    hikari:
+      data-source-properties:
+        currentSchema: ${xroad.common.serverconf.hibernate.hikari.dataSource.currentSchema}
   jpa:
+    ## *.hbm.xml files are loaded from classpath
+    mapping-resources: identifiers.hbm.xml,serverconf.hbm.xml,apikey.hbm.xml
+    open-in-view: false
     hibernate:
       ddl-auto: none
       show-sql: true
@@ -16,12 +26,26 @@ spring:
         dialect: ee.ria.xroad.common.db.CustomPostgreSQLDialect
         id:
           db_structure_naming_strategy: legacy #TODO Migrate to newer strategies
+  mvc:
+    throw-exception-if-no-handler-found: true
+  jackson:
+    default-property-inclusion: NON_NULL
+  servlet:
+    multipart:
+      max-file-size: ${xroad.proxy-ui-api.request-size-limit-binary-upload}
+      max-request-size: ${xroad.proxy-ui-api.request-size-limit-binary-upload}
   profiles:
     include: nontest
 
 # TLS
 # (can be overridden with external ssl.properties)
 server:
+  port: 4000
+  servlet:
+    session:
+      cookie:
+        secure: true
+        same-site: Strict
   ssl:
     key-store: /etc/xroad/ssl/proxy-ui-api.p12
     key-store-password: proxy-ui-api
@@ -37,6 +61,16 @@ logging.level:
   ee.ria.xroad.common.SystemPropertiesLoader: OFF
 
 xroad:
+  proxy-ui-api:
+    rate-limit-requests-per-second: 20
+    rate-limit-requests-per-minute: 600
+    rate-limit-cache-size: 10_000
+    rate-limit-expire-after-access-minutes: 5
+    cache-default-ttl: 60
+    cache-api-key-ttl: 60
+    strict-identifier-checks: true
+    request-size-limit-regular: 50KB
+    request-size-limit-binary-upload: 10MB
   common:
     serverconf:
       cache-period: 60
@@ -64,3 +98,36 @@ xroad:
           host: 127.0.0.1
           port: 5567
           deadline-after: 60000
+
+file-upload-endpoints:
+  endpoint-definitions:
+    -
+      http-method: POST
+      path-pattern: "/**/backups/upload"
+    -
+      http-method: POST
+      path-pattern: "/**/tls-certificates"
+    -
+      http-method: POST
+      path-pattern: "/**/token-certificates"
+    -
+      http-method: POST
+      path-pattern: "/**/certificate/import"
+
+script:
+  generate-gpg-keypair:
+    path: /usr/share/xroad/scripts/generate_gpg_keypair.sh
+  generate-certificate:
+    path: /usr/share/xroad/scripts/generate_certificate.sh
+    args: -n internal -f -S -p 2>&1
+  generate-backup:
+    path: /usr/share/xroad/scripts/backup_xroad_proxy_configuration.sh
+    valid-filename-pattern: "^(?!\\.)[\\w\\.\\-]+\\.gpg$"
+  restore-configuration:
+    path: /usr/share/xroad/scripts/restore_xroad_proxy_configuration.sh
+
+common-module-endpoints:
+  base-path: /api/v1
+
+gpgkeys:
+  gpghome: /etc/xroad/gpghome
