--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -158,6 +158,8 @@ jobs:
         with:
           name: CS System Test screenshots
           path: src/central-server/admin-service/ui-system-test/build/reports/test-automation/selenide-failures/*.png
+      - name: CS report artifact URL
+        run:  echo 'Artifact URL is ${{ steps.cs-artifacts-step.outputs.artifact-url }}'
       - name: Load test report history
         uses: actions/checkout@v4
         if: always()
