--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -153,7 +153,7 @@ jobs:
           reporter: java-junit
       - name: Upload CS screenshots
         id: cs-artifacts-step
-        if: failure()
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: CS System Test screenshots
