--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -394,7 +394,7 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: `## Allure reports for run #${{ github.run_number }}
+              body: `## Allure reports for run ${{ github.run_number }}
 
             | Test suite      | Report URL | Artifacts |
             |-----------------|------------|-----------|
