feat: use openbao PKI for gprpc mTLS

--- a/Docker/securityserver-v2/config/application-override.yaml
+++ b/Docker/securityserver-v2/config/application-override.yaml
@@ -1,3 +1,12 @@
+spring:
+  cloud:
+    vault:
+      uri: http://openbao:8200
+      token: 00000000-0000-0000-0000-000000000001
+      kv:
+        enabled: true
+        backend: secret
+
 xroad:
   messagelog:
     hibernate:
