--- a/src/central-server/registration-service/src/main/resources/application.yml
+++ b/src/central-server/registration-service/src/main/resources/application.yml
@@ -1,6 +1,14 @@
 spring:
   servlet:
     multipart.enabled: false
+  #TODO xroad8, this is getting duplicated per component. Consider moving to common location
+  cloud:
+    vault:
+      uri: http://openbao:8200
+      token: 00000000-0000-0000-0000-000000000001
+      kv:
+        enabled: true
+        backend: secret
 server:
   error:
     whitelabel:
