--- a/Docker/securityserver/files/etc/xroad/conf.d/application-override.yaml
+++ b/Docker/securityserver/files/etc/xroad/conf.d/application-override.yaml
@@ -30,3 +30,17 @@ xroad:
     update-interval: 10
   dataspaces:
     enabled: true
+
+spring:
+  cloud:
+    vault:
+      uri: http://openbao:8200
+      token: 00000000-0000-0000-0000-000000000001
+      kv:
+        enabled: true
+        backend: secret
+
+logging:
+  level:
+    org.niis.xroad: DEBUG
+    ee.ria.xroad: DEBUG
