--- a/src/central-server/management-service/application/src/main/resources/application.yml
+++ b/src/central-server/management-service/application/src/main/resources/application.yml
@@ -5,6 +5,14 @@ spring:
     multipart.enabled: false
   jackson:
     default-property-inclusion: NON_NULL
+#TODO xroad8, this is getting duplicated per component. Consider moving to common location
+  cloud:
+    vault:
+      uri: http://openbao:8200
+      token: 00000000-0000-0000-0000-000000000001
+      kv:
+        enabled: true
+        backend: secret
 
 server:
   error:
