--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -390,7 +390,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const csArtifactsUrl = `\${{ needs.RunCSSystemTests.outputs.cs-artifacts-url }}`;
+            const csArtifactsUrl = `${{ needs.RunCSSystemTests.outputs.cs-artifacts-url }}`;
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
