feat(CS): EC key support for global configuration
docs fixes and some refactoring

Refs: XRDDEV-2695

--- a/src/common/common-admin-api/src/test/resources/application.yml
+++ b/src/common/common-admin-api/src/test/resources/application.yml
@@ -23,6 +23,8 @@ xroad:
   admin-service:
     cache-default-ttl: 5
     cache-api-key-ttl: 5
+    internal-key-algorithm: RSA
+    external-key-algorithm: RSA
 
 file-upload-endpoints:
   endpoint-definitions:
