--- a/src/op-monitor-daemon/application/src/main/resources/application.yaml
+++ b/src/op-monitor-daemon/application/src/main/resources/application.yaml
@@ -15,3 +15,9 @@ xroad:
     max-records-in-payload: 10000
     records-available-timestamp-offset-seconds: 60
     health-statistics-period-seconds: 600
+    hibernate:
+      jdbc.use_streams_for_binary: true
+      connection.driver_class: org.postgresql.Driver
+      connection.url: jdbc:postgresql://127.0.0.1:5432/op-monitor
+      hikari.dataSource.currentSchema: opmonitor,public
+      connection.username: opmonitor
