--- a/src/security-server/admin-service/application/src/main/resources/common-application.yml
+++ b/src/security-server/admin-service/application/src/main/resources/common-application.yml
@@ -37,6 +37,8 @@ xroad:
     strict-identifier-checks: true
     request-size-limit-regular: 50KB
     request-size-limit-binary-upload: 10MB
+    authentication-key-algorithm: RSA
+    signing-key-algorithm: RSA
 
 file-upload-endpoints:
   endpoint-definitions:
