--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -399,7 +399,7 @@ jobs:
 
             | Test suite      | Report URL | Artifacts |
             |-----------------|------------|-----------|
-            | Central Server  | <a href="https://nordic-institute.github.io/X-Road/central-server/ui-system-test/${{ github.run_number }}" target="_blank">Report</a> | ${csArtifactUrl !== '' ? '<a href="${{ needs.RunCSSystemTests.outputs.cs-artifacts-url }}" target="_blank">Artifacts</a>' : 'N/A'} |
+            | Central Server  | <a href="https://nordic-institute.github.io/X-Road/central-server/ui-system-test/${{ github.run_number }}" target="_blank">Report</a> | ${csArtifactsUrl !== '' ? '<a href="${{ needs.RunCSSystemTests.outputs.cs-artifacts-url }}" target="_blank">Artifacts</a>' : 'N/A'} |
             | Security Server | <a href="https://nordic-institute.github.io/X-Road/security-server/system-test/${{ github.run_number }}" target="_blank">Report</a> | <a href="${{ needs.RunSSSystemTests.outputs.ss-artifacts-url }}" target="_blank">Artifacts</a> |
             | E2E             | <a href="https://nordic-institute.github.io/X-Road/e2e/${{ github.run_number }}" target="_blank">Report</a> | <a href="${{ needs.RunE2ETests.outputs.e2e-artifacts-url }}" target="_blank">Artifacts</a> |
             `
