chore: Renew EDC signing keys configuration method

--- a/src/central-server/ds-credential-service/build.gradle
+++ b/src/central-server/ds-credential-service/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation(project(":security-server:edc:extensions:common:xroad-jws-signer"))
     implementation(project(":security-server:edc:extensions:common:xroad-spring-bridge"))
     implementation(project(":security-server:edc:extensions:common:xroad-webserver"))
+    implementation(project(":security-server:edc:extensions:common:xroad-httpclient"))
 
     testImplementation libs.edc.junit
     testImplementation(project(':common:common-test'))
