--- a/src/security-server/edc/extensions/common/xroad-httpclient/build.gradle
+++ b/src/security-server/edc/extensions/common/xroad-httpclient/build.gradle
@@ -5,6 +5,7 @@ plugins {
 dependencies {
     implementation(project(':security-server:edc:xroad-edc-security'))
     implementation project(":security-server:edc:spi:xroad-core-spi")
+    implementation(project(":security-server:edc:extensions:common:xroad-spring-bridge"))
 
     implementation libs.edc.spi.core
     implementation libs.edc.core.connector
