--- a/src/security-server/edc/runtime/identity-hub/build.gradle
+++ b/src/security-server/edc/runtime/identity-hub/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation(project(":security-server:edc:extensions:common:xroad-jws-signer"))
     implementation(project(":security-server:edc:extensions:identity-hub:xroad-identity-hub-provisioner"))
     implementation(project(":security-server:edc:extensions:common:xroad-webserver"))
+    implementation(project(":security-server:edc:extensions:common:xroad-httpclient"))
     implementation(project(":security-server:edc:extensions:common:xroad-spring-bridge"))
     implementation(libs.logback.classic)
 
