chore: MessageLog beans registration in EDC

--- a/src/security-server/edc/extensions/common/xroad-spring-bridge/build.gradle
+++ b/src/security-server/edc/extensions/common/xroad-spring-bridge/build.gradle
@@ -7,6 +7,7 @@ dependencies {
     api project(':common:common-core')
     api project(':common:common-properties')
     api(project(':common:common-keyconf'))
+    api(project(':common:common-messagelog'))
     api(project(':common:common-globalconf'))
     api(project(':common:common-verifier'))
     implementation(libs.edc.boot)
