feat: Subsystem support for policy evalution of X-Road 8 credentials

--- a/src/security-server/edc/extensions/control-plane/xroad-policy/build.gradle
+++ b/src/security-server/edc/extensions/control-plane/xroad-policy/build.gradle
@@ -9,7 +9,7 @@ dependencies {
     implementation libs.edc.spi.dataplane
     implementation(project(':common:common-domain'))
     implementation(project(':common:common-verifier'))
-
+    implementation(project(':serverconf'))
     testImplementation libs.edc.junit
     testImplementation libs.assertj.core
     testImplementation libs.mockito.jupiter
