--- a/src/security-server/edc/runtime/data-plane/build.gradle
+++ b/src/security-server/edc/runtime/data-plane/build.gradle
@@ -22,7 +22,7 @@ dependencies {
     //runtimeOnly(libs.edc.dataplane.api.public)
     runtimeOnly(libs.edc.dataplane.api.signaling)
     runtimeOnly(libs.edc.ext.jsonld) // needed by the DataPlaneSignalingApi
-    runtimeOnly(libs.edc.dpf.selector.client) // for the selector service -> self registration
+    runtimeOnly(libs.edc.dpf.selector.client)
     runtimeOnly(libs.edc.vault.hashicorp)
 
     runtimeOnly(libs.bundles.sql.edc.dataplane)
