--- a/Docker/xrd-dev-stack/compose.edc.yaml
+++ b/Docker/xrd-dev-stack/compose.edc.yaml
@@ -23,6 +23,7 @@ services:
     environment:
       - EDC_HOSTNAME=ss0
       - EDC_DID=did:web:ss0%3A9396
+      - XROAD_MEMBER_IDENTIFIER=DEV:COM:1234
     ports:
       - "4295:9953" #control-plane debug
       - "4296:9954" #data-plane debug
@@ -41,6 +42,7 @@ services:
     environment:
       - EDC_HOSTNAME=ss1
       - EDC_DID=did:web:ss1%3A9396
+      - XROAD_MEMBER_IDENTIFIER=DEV:COM:4321
     ports:
       - "4395:9953" #control-plane debug
       - "4396:9954" #data-plane debug
