chore: test fixes

--- a/src/security-server/admin-service/application/src/test/resources/application.yml
+++ b/src/security-server/admin-service/application/src/test/resources/application.yml
@@ -15,6 +15,8 @@ spring:
   cloud:
     config:
       enabled: false
+    vault:
+      enabled: false
   mvc:
     throw-exception-if-no-handler-found: true
   jackson:
