chore: Remploy federated catalog

--- a/Docker/centralserver/files/cs-xroad.conf
+++ b/Docker/centralserver/files/cs-xroad.conf
@@ -61,13 +61,12 @@ startsecs=5
 autorestart=true
 priority=250
 
-# [program:xroad-edc-connector]
-# command=/usr/share/xroad/bin/xroad-edc-connector
-# user=root
-# startsecs=5
-# autorestart=true
-# priority=300
-# stdout_logfile=/var/log/xroad/edc-connector.log
+[program:xroad-edc-catalog-service]
+command=/usr/share/xroad/bin/xroad-edc-catalog-service
+user=root
+startsecs=5
+autorestart=true
+priority=300
 
 [program:xroad-edc-credential-service]
 command=/usr/share/xroad/bin/xroad-edc-credential-service
