refactor: remove deprecated hibernate structures/functions
Refs: XRDDEV-2713

--- a/src/common/common-admin-api/src/test/resources/application.yml
+++ b/src/common/common-admin-api/src/test/resources/application.yml
@@ -1,13 +1,16 @@
 # properties for test runtime
 spring:
   jpa:
-    mapping-resources: apikey.hbm.xml
     open-in-view: false
     generate-ddl: true
     show-sql: false
     defer-datasource-initialization: true
     hibernate:
       ddl-auto: create
+    properties:
+      hibernate:
+        id:
+          db_structure_naming_strategy: single
   profiles:
     active: test
   main:
