--- a/src/security-server/admin-service/application/src/main/resources/application.yml
+++ b/src/security-server/admin-service/application/src/main/resources/application.yml
@@ -6,14 +6,13 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
-      show-sql: true
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     properties:
       hibernate:
         dialect: ee.ria.xroad.common.db.CustomPostgreSQLDialect
         id:
-          db_structure_naming_strategy: legacy #TODO Migrate to newer strategies
+          db_structure_naming_strategy: single
   profiles:
     include: nontest
 
