--- a/src/central-server/admin-service/application/src/main/resources/application.yml
+++ b/src/central-server/admin-service/application/src/main/resources/application.yml
@@ -3,8 +3,6 @@
 
 spring:
   jpa:
-    mapping-resources:
-      - apikey.hbm.xml
     open-in-view: false
     hibernate:
       ddl-auto: validate
@@ -14,7 +12,7 @@ spring:
     properties:
       hibernate:
         id:
-          db_structure_naming_strategy: legacy #TODO Migrate to newer strategies
+          db_structure_naming_strategy: single
         dialect: ee.ria.xroad.common.db.Postgres10FixedImplicitSequenceDialect
   profiles:
     include: nontest
