--- a/src/common/common-admin-api/build.gradle
+++ b/src/common/common-admin-api/build.gradle
@@ -17,6 +17,9 @@ dependencies {
     implementation(project(':signer-protocol'))
     implementation(project(':serverconf'))
 
+    annotationProcessor(libs.mapstructProcessor)
+    annotationProcessor(libs.lombokMapstructBinding)
+
     implementation(platform(libs.springBoot.bom))
 
     implementation('org.springframework.boot:spring-boot-starter-web')
@@ -30,6 +33,7 @@ dependencies {
     implementation(libs.libpam4j)
     implementation(libs.swagger.parserV3)
     implementation(libs.swagger.annotations)
+    implementation(libs.mapstruct)
 
     testImplementation(project(':common:common-test'))
     testImplementation('org.springframework.boot:spring-boot-starter-test')
