--- a/src/op-monitor-daemon/core/src/test/resources/hibernate.properties
+++ b/src/op-monitor-daemon/core/src/test/resources/hibernate.properties
@@ -3,13 +3,13 @@
 hibernate.jdbc.batch_size=100
 
 # Using HSQLB in automated tests during builds.
-op-monitor.hibernate.dialect=org.hibernate.dialect.HSQLDialect
 op-monitor.hibernate.connection.driver_class=org.hsqldb.jdbcDriver
 # Using hsqldb.sqllog to see SQL statements in debug mode (gradle -d test)
 op-monitor.hibernate.connection.url=jdbc:hsqldb:mem:op-monitor;hsqldb.sqllog=3
 op-monitor.hibernate.connection.username=opmonitor
 op-monitor.hibernate.connection.password=opmonitor
 op-monitor.hibernate.hbm2ddl.auto=create-drop
+op-monitor.hibernate.show_sql=false
 
 # Use Postgres for manual testing or to let the automated tests populate the database.
 # This is useful for generating migrations for instance.
