--- a/src/security-server/admin-service/application/src/main/resources/common-application.yml
+++ b/src/security-server/admin-service/application/src/main/resources/common-application.yml
@@ -4,11 +4,11 @@ spring:
     throw-exception-if-no-handler-found: true
   jpa:
     ## *.hbm.xml files are loaded from classpath
-    mapping-resources: identifiers.hbm.xml,serverconf.hbm.xml,apikey.hbm.xml
+    mapping-resources: identifiers.orm.xml,serverconf.orm.xml
     open-in-view: false
     hibernate:
       ddl-auto: none
-      show-sql: true
+      show-sql: false
   jackson:
     default-property-inclusion: NON_NULL
   servlet:
