--- a/src/security-server/admin-service/application/src/test/resources/application.yml
+++ b/src/security-server/admin-service/application/src/test/resources/application.yml
@@ -4,12 +4,15 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
+    properties:
+      hibernate:
+        id:
+          db_structure_naming_strategy: single
     generate-ddl: true
     show-sql: false
     defer-datasource-initialization: true
   profiles:
     active: test
-
 
 logging:
   level:
