chore: add cross-spawn version override

--- a/src/package.json
+++ b/src/package.json
@@ -43,7 +43,8 @@
   },
   "pnpm": {
     "overrides": {
-      "semver": "^7.5.3"
+      "semver": "^7.5.3",
+      "cross-spawn": "7.0.5"
     }
   },
   "packageManager": "pnpm@9.12.2",
