chore: conf proxy add scheduled job for update
Refs: XRDDEV-2750

--- a/src/configuration-proxy/application/src/main/resources/application.yaml
+++ b/src/configuration-proxy/application/src/main/resources/application.yaml
@@ -8,6 +8,10 @@ server:
 
 xroad:
   configuration-proxy:
+    cli-mode: false
+    update-job-cron: 0 * * * * *
+
+    #    todo: review the following properties
     download-script: /usr/share/xroad/scripts/download_instance_configuration.sh
     address: 0.0.0.0
     signature-digest-algorithm-id: SHA-512
