chore: using conf client classes to download configuration in conf proxy
Refs: XRDDEV-2750

--- a/src/configuration-proxy/application/src/main/resources/application.yaml
+++ b/src/configuration-proxy/application/src/main/resources/application.yaml
@@ -8,7 +8,7 @@ server:
 
 xroad:
   configuration-proxy:
-    download-script: /usr/share/xroad/scripts/download_instance_configuration.sh
+#    download-script: /usr/share/xroad/scripts/download_instance_configuration.sh
     address: 0.0.0.0
     signature-digest-algorithm-id: SHA-512
     configuration-path: /etc/xroad/confproxy
