--- a/src/packages/src/xroad/common/base/etc/xroad/services/global.conf
+++ b/src/packages/src/xroad/common/base/etc/xroad/services/global.conf
@@ -76,6 +76,10 @@ detect_deployment_type() {
   export XROAD_DEPLOYMENT_TYPE=native
   export XROAD_APPLICATION_TYPE=$detected_application_type
   export XROAD_CONFIG_SERVER_URI=http://127.0.0.1:5580
+
+  export XROAD_SECRET_STORE_URI=https://127.0.0.1:8200
+  export XROAD_SECRET_STORE_TOKEN=undefined
+  XROAD_SECRET_STORE_TOKEN="$(cat /etc/xroad/secret-store-root-token)"
 }
 
 detect_deployment_type
